--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,30 @@
 /* for desktop screens */
-body {
-  position: absolute;
-  right: 0px;
-  bottom: 0px;
-  font-size: 18px;
+::-webkit-scrollbar {
+  display: none;
+}
+
+.container {
+  position: fixed;
+  border: 2px solid black;
   border-radius: 10px;
-  height: 600px;
-  width: 350px;
+  display: inline-block;
+  padding: 10px;
+  width: 300px;
+  height: 500px;
+  right: 10px;
+  bottom: 10px;
+  background-color: #fff;
 }
 
 .chats-div {
-  margin: 10px;
+  margin: 3px;
+  padding: 5px;
+  overflow-y: scroll;
+  height: 90%;
 }
 
 .query-div {
   margin-bottom: 30px;
-  display: flex;
-  justify-content: flex-end;
 }
 
 .query-bubble {
@@ -26,12 +34,13 @@ body {
   border-radius: 10px;
   background-color: rgb(0, 137, 235);
   color: white;
+  margin: auto;
+  margin-right: 0%;
+  position: relative;
 }
 
 .reply-div {
   margin-bottom: 30px;
-  display: flex;
-  justify-content: flex-start;
 }
 
 .reply-bubble {
@@ -45,19 +54,16 @@ body {
 
 #input-div {
   position: fixed;
-  display: flex;
-  bottom: 0px;
-  padding: 10px 10px 10px 10px;
-  justify-content: space-between;
-  width: 330px;
-  background-color: white;
+  width: 480px;
+  bottom: 20px;
 }
 
 #msg-input {
   padding: 10px;
   color: black;
   font-size: 18px;
-  width: 70%;
+  width: 45%;
+  margin-right: 5px;
   border: 1px solid black;
   border-radius: 5px;
 }
@@ -69,7 +75,7 @@ body {
 #send-button {
   padding: 10px;
   height: min-content;
-  font-size: 20px;
+  font-size: 18px;
   background-color: rgb(21, 130, 255);
   color: white;
   border: none;
@@ -78,78 +84,25 @@ body {
 
 /* for mobile screens */
 @media only screen and (max-width: 600px) {
-  body {
-    border: none;
-    font-size: 20px;
+  .container {
     width: 100%;
     height: 100%;
-  }
-
-  .chats-div {
-    height: 70%;
-    margin: 10px;
-  }
-
-  .query-div {
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: flex-end;
-  }
-
-  .query-bubble {
-    width: fit-content;
-    max-width: 60%;
-    padding: 10px;
-    border-radius: 10px;
-    background-color: rgb(0, 137, 235);
-    color: white;
-  }
-
-  .reply-div {
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: flex-start;
-  }
-
-  .reply-bubble {
-    width: fit-content;
-    max-width: 60%;
-    padding: 10px;
-    border-radius: 10px;
-    background-color: rgb(210, 249, 227);
-    color: black;
+    right: 0px;
+    bottom: 0px;
+    padding: 0px;
+    border: none;
   }
 
   #input-div {
     position: fixed;
-    display: flex;
-    max-width: 100%;
-    bottom: 0px;
-    padding-left: 20px;
-    justify-content: space-between;
-    background-color: white;
+    width: 100%;
+    bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   #msg-input {
     padding: 10px;
-    color: black;
-    font-size: 20px;
-    width: 70%;
-    border: 1px solid black;
-    border-radius: 5px;
-  }
-
-  #msg-input:focus {
-    outline-color: blue;
-  }
-
-  #send-button {
-    padding: 10px;
-    height: min-content;
-    font-size: 20px;
-    background-color: rgb(21, 130, 255);
-    color: white;
-    border: none;
-    border-radius: 5px;
+    width: 73%;
   }
 }
